samples/_failures_safe/1761295756_a0facf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04b37aef.c: In function ‘main’:
./samples/SAFE/__tmp_04b37aef.c:194:13: error: expected expression at end of input
  194 |             running =
      |             ^~~~~~~
./samples/SAFE/__tmp_04b37aef.c:194:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04b37aef.c:194:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04b37aef.c:194:13: error: expected declaration or statement at end of input
